Spacing Fix

--- a/css/main.css
+++ b/css/main.css
@@ -255,7 +255,7 @@ iframe {
 
 .ss-q-checkbox {
     position: absolute;
-    left: 7.3%;
+    left: 7%;
 }
 
 .ss-item {
